--- a/About.html
+++ b/About.html
@@ -39,30 +39,27 @@
 <div class="text-box">
     <h1>About Us</h1>
     <h4>iDroid is a computer retail business founded on the values of convenience, accessibility, and excellent customer service.  </h4>
-    <h4>Our company address is located near in University of Cebu Main-Campus</h4>
-    <audio controls>
+    <h4>Our company address is located near in University of Cebu Main-Campus.</h4>
+    <!-- <audio controls>
         <source src="audio/about2.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
-    </audio>
+    </audio> -->
 
-    <h4>Our Mission</h4>
+    <h1>Our Mission</h1>
     <h4>We strive to enhance the Filipino experience in computer essentials through technology-driven & value for money solutions, powered by our technical expertise, passion for innovation, and customer-centric philosophy.</h4>
-    <audio controls>
+    <!-- <audio controls>
         <source src="audio/mission.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
-    </audio>
-</section>
-<section class="vision">
-    <h4>Our Vision</h4>
-    <h4>iDroid is committed to being the most trusted partner of Filipino households and growing businesses for computer essentials by providing exceptional customer experience built on ease, technical expertise, and empathy.</h4>
-    <audio controls>
+    </audio> -->
+
+    <h1>Our Vision</h1>
+    <h4>iDroid is committed to being the most trusted partner of Filipino households and growing businesses for computer essentials by providing exceptional customer experience built on ease, technical expertise, and empathy.</h4> 
+    <!-- <audio controls>
         <source src="audio/vision.mp3" type="audio/mp3">
       Your browser does not support the audio tag.
-    </audio>
-    
-</div>
+    </audio> -->
 </section>
-
+</div>
 <!-- Footer -->
 <footer>
     <h2>
